Bug 1364560 Add support for disabling Skia Jumper assembly code r=lsalzman

The assembly code is not working in the MinGW build, so we
rebase and pull in the upstream commit that adds support for
not using the optimized jumper assembly code.

https://skia.googlesource.com/skia/+/6492afa7971cf295a3c3cb92a85218917c02bb4a

MozReview-Commit-ID: CARHRTHmQ0i

--HG--
extra : rebase_source : c6d9f19f8742a337e6ab3342d34118f37da71ae7